--- a/views/password.ejs
+++ b/views/password.ejs
@@ -82,7 +82,7 @@ body {
 <body>
  <% if(locals.error){%> 
     <div class="error">
-        Incurrect Password
+        Incorrect Password
     </div>
    <% } %>
         <form method="post" class="form">
